# konsol-2024

./: Dockerfile  docker-compose.yml  nginx.conf  outer-nginx.conf
backend/: Cargo.toml  backend.db  diesel.toml
backend/src/: actions.rs  main.rs  models.rs  schema.rs
backend/sås/: errors.rs  main.rs  schema.template.rs
backend/sås/handlers/: mod.rs
backend/sås/repositories/: mod.rs
backend/sås/services/: mod.rs
screen-frontend/src/components/: App.tsx
screen-frontend/src/components/sl/: SlDepartureCard.tsx  SlDepartureList.tsx  SlLineBadge.tsx
screen-frontend/src/styles/layouts/: MixedLayout.css
screen-frontend/src/styles/sl/: SlDepartureCard.css  SlLineBadge.css
