[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2", features = ["sqlite", "r2d2", "uuid",] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4.22"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
once_cell = "1.18.0"
validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"
thiserror = "1.0"
async-trait = "0.1"

